# drfjsondemo

./: pyproject.toml
demo/demo/: settings.py  urls.py
demo/main/: fixtures.json  models.py  serializers.py  urls.py  views.py
demo/main/migrations/: 0001_initial.py  0002_alter_mymodel_field.py
